# SFML-Ping-Pong

./: CMakeLists.txt  README.md  main.cpp
include/: ScoreBoard.h  ball.h  paddle.h
src/: ScoreBoard.cpp  ball.cpp  paddle.cpp
